--- a/src/ui.css
+++ b/src/ui.css
@@ -2,11 +2,24 @@ body {
         background-color: #fbfde5;
 }
 
+
 .section {
          background-color: #eff2c8;
-         padding: 12px 16px;
+         padding: 50px 100px;
          outline: #bdba7c;
          outline-style: solid;
+}
+
+h2 {
+        background-color: #d5c850;
+        padding: 30px 30px;
+        text-align: center;
+}
+
+.edu, .workEx {
+        outline: #bdba7c ;
+        outline-style: solid;
+        padding: 35px 35px;
 }
 
 .edu:hover {
@@ -37,7 +50,6 @@ body {
 } 
 
 #bkToTop {
-        display: none;
         position: fixed;
         bottom: 20px;
         right: 30px;
@@ -66,6 +78,7 @@ h1 {
         overflow: hidden;
         outline: #bdba7c;
         outline-style: outset;
+        
 }
 
 .nav a {
@@ -97,8 +110,6 @@ h1 {
 .nav a:hover, .dropdown:hover .dropbutton {
         background-color: #e4e9a0;
         color: black;
-        outline: black;
-        outline-style: solid;
 }
 
 .dropContent {
